<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:id="@+id/secondActivityMain"
    android:background="@color/victory_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="3">

            <TextView
                android:text="@string/your_choice"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_column="0"/>

            <TextView
                android:text="@string/random_choice"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_column="2"/>

            <TextView
                android:text="@string/vs_label"
                android:textSize="50sp"
                android:layout_column="1"
                android:layout_rowSpan="2"/>

            <TextView
                android:id="@+id/yourChoice"
                android:text="@string/rock_label"
                android:gravity="center_horizontal"
                android:textSize="40sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_column="0"/>

            <TextView
                android:id="@+id/randomChoice"
                android:text="@string/rock_label"
                android:gravity="center_horizontal"
                android:textSize="40sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_column="2"/>

        </GridLayout>

        <TextView
            android:id="@+id/resultMessage"
            android:text="@string/victory_message"
            android:textSize="60sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <TextView
                android:text="@string/once_again"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_columnWeight="10"/>

            <Button
                android:id="@+id/returnButton"
                android:text="@string/return_message"
                android:layout_column="1"
                android:layout_columnWeight="1"/>

        </GridLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>